fix minor bugs (scrollbar, padding bottom for the last item in page)

--- a/css/3-pages/about.sass
+++ b/css/3-pages/about.sass
@@ -28,7 +28,7 @@
 
   .reviews
     display: flex
-    flex-width: nowrap
+    flex-wrap: wrap
     align-items: center
     .forbes-logo, .mg-logo, .lxry-logo
       opacity: 0.8
