--- a/css/3-pages/menu.sass
+++ b/css/3-pages/menu.sass
@@ -75,6 +75,8 @@
     @media only screen and (max-width: $bp-sm)
       left: 0
 
+  section:last-of-type
+    padding-bottom: 2rem
   /***    STYLES FOR HEADING    ***/
 
   h1
