--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,6 @@ ul, h1, h2, h3, p {
   width: -webkit-calc(100% / 3);
   width: calc(100% / 3);
   height: 100%;
-  overflow: scroll;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -470,7 +469,8 @@ ul, h1, h2, h3, p {
       min-height: 100vh; } }
 
 .block {
-  background-color: rgba(255, 255, 255, 0.9); }
+  background-color: rgba(255, 255, 255, 0.9);
+  overflow: scroll; }
 
 .col-holder {
   display: -webkit-box;
@@ -1181,7 +1181,9 @@ input[type=date] {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    flex-width: nowrap;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
@@ -1346,6 +1348,8 @@ input[type=date] {
     @media only screen and (max-width: 480px) {
       .menu #desserts-copy {
         left: 0; } }
+  .menu section:last-of-type {
+    padding-bottom: 2rem; }
   .menu h1 {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.9);
